--- a/packages/antd/src/array-base/style.less
+++ b/packages/antd/src/array-base/style.less
@@ -12,6 +12,15 @@
   }
 }
 
+.@{array-base-prefix-cls}-copy {
+  transition: all 0.25s ease-in-out;
+  color: @text-color;
+  font-size: 16px;
+  &:hover {
+    color: @primary-5;
+  }
+}
+
 .@{array-base-prefix-cls}-sort-handle {
   cursor: move;
   color: #888 !important;
