--- a/packages/antd/src/form-item/style.less
+++ b/packages/antd/src/form-item/style.less
@@ -288,7 +288,7 @@
   .@{ant-prefix}-select-multiple:not(.@{ant-prefix}-select-customize-input)
     .@{ant-prefix}-select-selector {
     padding: 0px 2px;
-    height: @height-sm - 2;
+    // height: @height-sm - 2;
     font-size: @font-size-sm;
     line-height: @height-sm;
 
@@ -441,7 +441,7 @@
   .@{ant-prefix}-select-multiple:not(.@{ant-prefix}-select-customize-input)
     .@{ant-prefix}-select-selector {
     padding: 0px 2px;
-    height: @height-lg - 2;
+    // height: @height-lg - 2;
     font-size: @font-size-lg;
     line-height: @height-lg;
 
